--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "description": "Custom templates plugin",
     "version": "1.0.0",
     "author": "Abhinav Kumar",
-    "repository": "https://github.com/abhinav2712/monokle-templates-plugin.git",
+    "repository": "https://github.com/abhinav2712/monokle-templates-plugin",
     "monoklePlugin": {
       "modules": [
         {
