--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "author": "Abhinav Kumar",
     "repository": "https://github.com/abhinav2712/monokle-templates-plugin",
     "monoklePlugin": {
+      "id":"com.github.abhinav2712.plugin.templates",
+      "helpUrl":"https://github.com/abhinav2712/monokle-templates-plugin",
       "modules": [
         {
           "type": "template",
